# pyproject.toml
[project]
name = "comfyui-maskarbiter" # Unique identifier for your node. Immutable after creation.
description = "A node for ComfyUI that takes a list of masks and returns a single mask based on your criteria."
version = "0.1.3" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/SparknightLLC/ComfyUI-MaskArbiter"

[tool.comfy]
PublisherId = "sparknight" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-MaskArbiter" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)
